tests/NormalTests/paczka1/small_fuzzy/77236712.err
Error in line 1: cuaVhh7LM A165 12,4
Error in line 16: A534 A534 -1,3
